--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,7 +1,28 @@
 .App {
   text-align: center;
 }
+.ProductList {
+  width: 400px;
+  text-align: left;
+}
 
+.CartList {
+  width: 400px;
+  text-align: left;
+}
+
+button {
+    padding: 5px 12px;
+    border: none;
+}
+
+.singleProduct {
+  width: 400px;
+}
+
+.singleCartItem {
+  width: 400px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
